--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -20,15 +19,17 @@ body {
   left: 0;
   top: 0;
 }
+
 .logo {
   display: flex;
-  justify-content: center
-  text-align-center
+  justify-content: center;
+  text-align: center;
   width: 69px;
   height: 71px;
   margin-left: 82px;
 }
-h2 {
+
+.logo p {
   width: 164px;
   height: 64px;
   margin-top: 15px;
@@ -39,6 +40,7 @@ h2 {
   line-height: 64px;
   color: #FFFFFF;
 }
+
 .menu {
   display: flex;
   justify-content: center;
@@ -46,6 +48,7 @@ h2 {
 
   margin-right: 100px;
 }
+
 .menu a {
   text-decoration: none;
   color: white;
@@ -103,32 +106,32 @@ h2 {
 
 .container1 a {
 
-margin-left: 240px;
+  margin-left: 240px;
 
-font-family: 'Ubuntu';
-font-style: normal;
-font-weight: 400;
-font-size: 27px;
-line-height: 31px;
-color: #FF4081;
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 27px;
+  line-height: 31px;
+  color: #FF4081;
 
-width: 268px;
-height: 51px;
-left: 207px;
-top: 577px;
-padding: 8px 30px;
+  width: 268px;
+  height: 51px;
+  left: 207px;
+  top: 577px;
+  padding: 8px 30px;
 
-border: 2px solid #FF4081;
-border-radius: 62px;
+  border: 2px solid #FF4081;
+  border-radius: 62px;
 }
 
 .container2 {
   width: 50%;
   left: 50.9%;
-right: 14.31%;
-top: 7.88%;
-bottom: 76.13%;
-margin-top: 135px
+  right: 14.31%;
+  top: 7.88%;
+  bottom: 76.13%;
+  margin-top: 135px
 }
 
 
@@ -151,23 +154,23 @@ margin-top: 135px
 .cont1 {
   margin-left: 156px;
   text-align: center;
-  
+
 }
 
 .title1 {
 
-font-family: 'Ubuntu';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 29px;
-text-align: center;
-color: #FF4081;
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 29px;
+  text-align: center;
+  color: #FF4081;
 
-width: 344px;
-height: 29px;
-margin-top: 40px;
-margin-bottom: 20px;
+  width: 344px;
+  height: 29px;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .cont1 p {
@@ -178,7 +181,7 @@ margin-bottom: 20px;
   line-height: 20px;
   text-align: center;
 
-color: #000000;
+  color: #000000;
 }
 
 .btn1 {
@@ -210,19 +213,19 @@ color: #000000;
 
 .title2 {
   font-family: 'Ubuntu';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 29px;
-text-align: center;
-color: #FF4081;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 29px;
+  text-align: center;
+  color: #FF4081;
 
-width: 267px;
-height: 29px;
-left: 606px;
-top: 1251px;
-margin-top: 40px;
-margin-bottom: 20px;
+  width: 267px;
+  height: 29px;
+  left: 606px;
+  top: 1251px;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .btn2 {
@@ -254,19 +257,19 @@ margin-bottom: 20px;
 
 .title3 {
   font-family: 'Ubuntu';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 29px;
-text-align: center;
-color: #FF4081;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 29px;
+  text-align: center;
+  color: #FF4081;
 
-width: 304px;
-height: 29px;
-left: 1007px;
-top: 1251px;
-margin-top: 40px;
-margin-bottom: 20px;
+  width: 304px;
+  height: 29px;
+  left: 1007px;
+  top: 1251px;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .btn3 {
@@ -369,7 +372,7 @@ margin-bottom: 20px;
 
   width: 104px;
   height: 104px;
-  
+
   background: #FFFFFF;
   border: 3px solid #FF4081;
   border-radius: 50px;
@@ -408,7 +411,7 @@ margin-bottom: 20px;
 
   width: 104px;
   height: 104px;
-  
+
   background: #FFFFFF;
   border: 3px solid #FF4081;
   border-radius: 50px;
@@ -446,7 +449,7 @@ margin-bottom: 20px;
 
   width: 104px;
   height: 104px;
-  
+
   background: #FFFFFF;
   border: 3px solid #FF4081;
   border-radius: 50px;
@@ -523,7 +526,7 @@ margin-bottom: 20px;
   background: #C4C4C4;
 }
 
-.titulo3{
+.titulo3 {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 700;
@@ -539,7 +542,6 @@ margin-bottom: 20px;
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
-  border: 2px solid red;
   width: 300px;
 
   color: #000000;
@@ -554,7 +556,7 @@ margin-bottom: 20px;
   background: #C4C4C4;
 }
 
-.titulo4{
+.titulo4 {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 700;
@@ -570,7 +572,6 @@ margin-bottom: 20px;
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
-  border: 2px solid red;
   width: 300px;
 
   color: #000000;
@@ -585,7 +586,7 @@ margin-bottom: 20px;
   background: #C4C4C4;
 }
 
-.titulo5{
+.titulo5 {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 700;
@@ -601,75 +602,95 @@ margin-bottom: 20px;
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
-  border: 2px solid red;
   width: 300px;
 
   color: #000000;
 }
 
 .button3 {
-font-family: 'Ubuntu';
-font-style: normal;
-font-weight: 400;
-font-size: 27px;
-line-height: 31px;
-color: #FF4081;
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 27px;
+  line-height: 31px;
+  color: #FF4081;
 
-border: 2px solid #FF4081;
-border-radius: 62px;
+  border: 2px solid #FF4081;
+  border-radius: 62px;
 
-display: flex;
-justify-content: center;
-
-margin-top: 100px;
-margin-left: 650px;
-margin-right: 650px;
-}
-
-.secao5 {
   display: flex;
   justify-content: center;
-  align-items: center;
-  max-width: 100%;
-  height: 210px;
-  gap: 250px;
-  left: 0%;
-  right: 0%;
-  top: 0%;
-  bottom: 0%;
+
+  margin-left: 650px;
+  margin-right: 650px;
+  width: 289px;
+  margin-top: 100px;
+  padding: 10px 10px;
+}
+
+
+
+
+footer {
   background: #419488;
-}
-
-.logo{
+  color: #FFFFFF;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.colum4 {
-
-}
-
-.titulo6 {
+  justify-content: space-around;
   
 }
 
-.text02 {
+footer div label {
+  box-sizing: border-box;
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-size: 66px;
+  line-height: 76px;
 }
 
-.menus{
-
+footer div p {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Ubuntu;
+  font-size: 19px;
+  font-weight: 300;
+  line-height: 22px;
 }
 
-.botoes {
+.div_rod {
+  display: flex;
+  border: 1px solid #FFF;
+  width: 33.33%;
+  margin: 10px;
+  width: 800px;
 }
 
+.img_rod {
+  width: 100px;
+  height: 100px;
+}
 
+.div_rod ul {
+  list-style: none;
+}
 
+.div_rod ul li {
+  margin: 10px 0;
+}
 
+.div_rod ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: var(--a);
+  text-decoration: none;
+  font-weight: 300;
+  display: block;
+  transition: all 0.3s ease;
+}
 
-
-
-
-
-
+@media (max-width:800px) {
+  .div_rod {
+      width: 100%;
+      margin-bottom: 30px;
+  }
+}
