--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
   text-align: center;
   width: 69px;
   height: 71px;
-  margin-left: 82px;
+  margin-left: 160px;
+  
 }
 
 .logo p {
@@ -487,8 +488,6 @@ body {
 
 
 .secao4 {
-
-  border: 2px solid red;
   width: 100vw;
   height: 750px;
   margin: auto;
@@ -607,90 +606,122 @@ body {
   color: #000000;
 }
 
-.button3 {
+.ver-posts {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.ver-posts a {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 400;
   font-size: 27px;
   line-height: 31px;
   color: #FF4081;
-
   border: 2px solid #FF4081;
   border-radius: 62px;
-
-  display: flex;
-  justify-content: center;
-
-  margin-left: 650px;
-  margin-right: 650px;
-  width: 289px;
-  margin-top: 100px;
-  padding: 10px 10px;
+  width: 268px;
+  padding: 8px 30px;
 }
 
-
-
-
-footer {
-  background: #419488;
-  color: #FFFFFF;
+.footer {
+  background: #009688;
   display: flex;
-  justify-content: space-around;
-  
+  justify-content: space-between;
+  align-items: center;
+  height: 190px;
 }
 
-footer div label {
-  box-sizing: border-box;
+.container3 {
+  display: flex;
+  margin-left: 120px;
+}
+
+.img-1 {
+  width: 99px;
+  height: 101px;
+  top: 53px;
+  left: 128px;
+
+}
+
+.container4 {
+  margin-left: 25px;
+}
+
+.dindin {
   font-family: 'Ubuntu';
   font-style: normal;
+  font-weight: 500;
   font-size: 66px;
   line-height: 76px;
+  color: #FFFFFF;
 }
 
-footer div p {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Ubuntu;
+.edu-finan {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 300;
   font-size: 19px;
-  font-weight: 300;
   line-height: 22px;
+  color: #FFFFFF;
 }
 
-.div_rod {
+.container5 {
   display: flex;
-  border: 1px solid #FFF;
-  width: 33.33%;
-  margin: 10px;
-  width: 800px;
+  flex-direction: column;
 }
 
-.img_rod {
-  width: 100px;
-  height: 100px;
-}
+.container5 a {
+  left: 43.26%;
+  right: 51.81%;
+  top: 25.6%;
+  bottom: 34.3%;
 
-.div_rod ul {
-  list-style: none;
-}
-
-.div_rod ul li {
-  margin: 10px 0;
-}
-
-.div_rod ul li a {
-  font-size: 16px;
-  text-transform: capitalize;
-  color: var(--a);
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
   text-decoration: none;
-  font-weight: 300;
-  display: block;
-  transition: all 0.3s ease;
+  padding: 2px;
+
+  color: #FFFFFF;
 }
 
-@media (max-width:800px) {
-  .div_rod {
-      width: 100%;
-      margin-bottom: 30px;
-  }
+.container6 {
+  display: flex;
+  flex-direction: column;
+  margin-right: 137px;
+}
+
+.text12 {
+
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  border: 2px solid #FFFFFF;
+  border-radius: 62px;
+  width: 300px;
+  padding: 10px;
+  text-align: center;
+  color: #FFFFFF;
+  margin-bottom: 10px;
+
+}
+
+.text13 {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  border: 2px solid #FFFFFF;
+  border-radius: 62px;
+  width: 300px;
+  padding: 10px;
+  text-align: center;
+  color: #FFFFFF;
 }
