--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-<<<<<<< HEAD
-@charset "UTF-8";
-
-:root {
-    --head_footer: #2E948A;
-    --background0: #E5E5E5;
-    --background1: #F7F7F7;
-    --bottom_titulo_rosa: #FF4081;
-    --titulo_verde: #009688;
-    --p: #000000;
-}
 
 * {
     padding: 0;
@@ -16,23 +5,6 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
-}
-
-/* estilo base */
-body {
-    font-size: 16px;
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 0 20px;
-=======
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  overflow-x: hidden;
 }
 
 .header {
@@ -55,6 +27,10 @@ body {
   height: 71px;
   margin-left: 160px;
   
+}
+
+.logo-1 {
+  margin-right: 15px;
 }
 
 .logo p {
@@ -751,5 +727,4 @@ body {
   padding: 10px;
   text-align: center;
   color: #FFFFFF;
->>>>>>> 90715a18632b90da52742a51f35e2c1499ce0152
 }
