--- a/contatos.css
+++ b/contatos.css
@@ -4,8 +4,78 @@
     box-sizing: border-box;
 }
 
-.contato-container{
-    width: 20%;
+.contato-form {
+    padding: 10px 10px;
+
+    margin-left: 136px;
+    margin-top: 90px;
+}
+
+.contato-text1 {
+
+    color: #FF4081;
+
+}
+
+.contato-in {
+    color: #686868;
+    margin-top: 15px;
+
+    width: 493px;
+    height: 32px;
+    left: 3px;
+    border-radius: 7px;
+}
+
+input::placeholder {
+    text-indent: 20px;
+
+    color: #686868;
+}
+
+textarea::placeholder {
+    text-indent: 20px;
+    padding-top: 10px;
+}
+
+textarea {
+    width: 493px;
+    height: 200px;
+    margin-top: 15px;
+    border-radius: 7px;
+}
+
+.contato-btn {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #FFFFFF;
+    width: 130px;
+    height: 41px;
+    left: 184px;
+    top: 1391px;
+    background: #FF4081;
+    border-radius: 62px;
+    border: none;
+    margin-top: 18px;
+    margin-bottom: 100px;
+}
+
+.contato-img {
+    width: 444px;
+    height: 444px;
+    left: 833px;
+    top: 199px;
+
+    margin-top: 15px;
+    margin-left: 90px;
+}
+
+.contato-container {
+    display: flex;
 }
 
 .contato-form {
