--- a/cursos.css
+++ b/cursos.css
@@ -100,6 +100,15 @@
 
     background: #419488;
     border-radius: 62px;
+    border: none;
+    transition: 150ms linear;
+}
+
+.curso-text5:hover {
+  background-color: #FF4081;
+  font-size: 21px;
+  width: 220px;
+  padding: 17px;
 }
 
 .linha {
@@ -110,13 +119,6 @@
     height: 5px;
     background: #C4C4C4;
 }
-
-
-
-
-
-
-
 
 .curso-img02 {
     margin-left: 163px;
@@ -166,6 +168,7 @@
     width: 216px;
     text-decoration: none;
     padding: 15px;
+    border: none;
 
     font-family: 'Ubuntu';
     font-style: normal;
@@ -178,6 +181,14 @@
 
     background: #419488;
     border-radius: 62px;
+    transition: 150ms linear;
+}
+
+.curso-text06:hover {
+  background-color: #FF4081;
+  font-size: 21px;
+  width: 220px;
+  padding: 17px;
 }
 
 .linha {
@@ -237,6 +248,7 @@
     width: 216px;
     text-decoration: none;
     padding: 15px;
+    border: none;
 
     font-family: 'Ubuntu';
     font-style: normal;
@@ -250,9 +262,153 @@
     background: #419488;
     border-radius: 62px;
     margin-bottom: 200px;
+    transition: 150ms linear;
 }
 
+.curso-text007:hover {
+  background-color: #FF4081;
+  font-size: 21px;
+  width: 220px;
+  padding: 17px;
+}
+
+.modal {
+    display: none; /* Ocultar o modal por padrão */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+  }
 
 
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 70%;
+    height: 80%;
+    border: none;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 
+  .modal-img {
+    width: 500px;
+    height: 300px;
+    margin-left: 20px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+
+  }
+  
+  .modal-title1 {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 29px;
+    text-align: start;
+    color: #FF4081;
+
+    width: 550px;
+    height: 29px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+  }
+
+  .modal-title2 {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 29px;
+    text-align: center;
+    color: #FF4081;
+    text-align: start;
+
+    width: 400px;
+    height: 29px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+  }
+
+  .modal-title3 {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 29px;
+    text-align: center;
+    color: #FF4081;
+    text-align: start;
+    margin-left: 20px;
+  
+    width: 450px;
+    height: 29px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+
+  .modal-p1 {
+    margin-left: 20px;
+    text-align: start;
+  }
+
+  .modal-container1{
+    display: flex;
+    gap: 140px;
+  }
+
+  .modal-comecar {
+    width: 250px;
+    height: 50px;
+    text-decoration: none;
+    border: none;
+    align-items: center;
+    margin-top: 180px;
+    margin-right: 300px;
+    
+
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+
+    color: #FFFFFF;
+
+    background: #419488;
+    border-radius: 62px;
+    margin-bottom: 200px;
+    transition: 150ms linear;
+  }
+
+.modal-comecar:hover {
+  width: 255px;
+  height: 55px;
+  border: 3px solid #419488;
+  background-color: #FF4081;
+}
