--- a/blog.css
+++ b/blog.css
@@ -7,10 +7,10 @@
 }
 
 .blog-secao1 {
+    margin-top: 40px;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
+
 
 .blog-foto1 {
     width: 405px;
@@ -106,4 +106,46 @@
     align-items: center;
 
     color: #000000;
+}
+
+@media screen and (max-width: 768px) {
+
+    .blog-secao1 {
+        display: block;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .blog-container1 h1 {
+        width: 512px;
+        height: 108px;
+
+        margin-left: 90px;
+
+
+    }
+
+    .blog-container1 p {
+        width: 381px;
+        height: 110px;
+        margin-left: 90px;
+        margin-top: 30px;
+    }
+
+    .blog-secao2 {
+        display: block;
+    }
+
+    .blog-foto-card1 {
+        width: 418px;
+        height: 259px;
+        margin-top: 110px;
+    }
+    
+    .blog-foto-card2 {
+        width: 418px;
+        height: 259px;
+        margin-top: 110px;
+    }
+    
 }
